What's the difference between `class` and `struct` - task completed in Partial_sealed_abstract_classes. Added ItemSize struct, and now program also print size and volume of ItemSize

--- a/Partial_sealed_abstract_classes/Shop.Orders/Shop.Orders.csproj
+++ b/Partial_sealed_abstract_classes/Shop.Orders/Shop.Orders.csproj
@@ -48,7 +48,9 @@
   <ItemGroup>
     <Compile Include="ElectronicsItem.cs" />
     <Compile Include="GroceryItem.cs" />
+    <Compile Include="Item.cs" />
     <Compile Include="ItemBase.cs" />
+    <Compile Include="ItemSize.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="OrderBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
