What's the difference between `interface` and `abstract` class - task is completed in Partial_sealed_abstract_classes project. Aded two interfaces: IOrderTotalCalculator and IShippingCalculator, also added method in Program.cs to make connection to interfaces

--- a/Partial_sealed_abstract_classes/Shop.Orders/Shop.Orders.csproj
+++ b/Partial_sealed_abstract_classes/Shop.Orders/Shop.Orders.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="ElectronicsItem.cs" />
     <Compile Include="GroceryItem.cs" />
+    <Compile Include="Interfaces.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="ItemBase.cs" />
     <Compile Include="ItemSize.cs" />
