--- a/What_is_enum/What_is_enum.csproj
+++ b/What_is_enum/What_is_enum.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DF55F5AB-49A5-4ECC-809C-9595BE06CD9C}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <RootNamespace>Shop.Orders</RootNamespace>
-    <AssemblyName>Shop.Orders</AssemblyName>
+    <ProjectGuid>{0BD128A3-E8C8-4903-AF99-C2D11F90926C}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>What_is_enum</RootNamespace>
+    <AssemblyName>What_is_enum</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -32,9 +32,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -46,17 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ElectronicsItem.cs" />
-    <Compile Include="Enums.cs" />
-    <Compile Include="GroceryItem.cs" />
-    <Compile Include="Interfaces.cs" />
-    <Compile Include="Item.cs" />
-    <Compile Include="ItemBase.cs" />
-    <Compile Include="ItemSize.cs" />
-    <Compile Include="Order.cs" />
-    <Compile Include="OrderBase.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServiceItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
